--- a/cm.tex
+++ b/cm.tex
@@ -49,7 +49,28 @@
 			Energy associated with the body/particle due to virtue of its motion.
 
 	\section*{Generalized Coordinates: }
+		\noindent
 
+		Generalized coordinates are a set of coordinates which can fully describe the system. If there are no holonomic constraints, then the no. of Generalised coordinates requires is same as the Degrees of Freedom. They need not be Orthogonal coordinates and can be mixed(mixture of coordinate systems is allowed eq. from cartesian and spherical coordinate systems).
+		
+		\paragraph*{Advantages:}
+		\begin{itemize}
+			% \item Since the Equation of Motion is in the form of generalised coordinates it can be easily transformed to another coordinate system.
+			% \item Since the Lagrangian and Hamiltonian Equations are in the form of generalised coordinates they remanin invarient during a coordinate transformation.
+			\item If a Lagrangian is specified in generalised coordinates then its very easy to rewrite it in another coordinate system.
+			\item It shows the generality of the equations, I mean, it shows that (for eq)Principle of Stationary Action doesn't depend upon the coordinate system used, be it Cartesian or Curviliear, the equations would correspond to the same thing.
+			\item Its easier to handle holonomic constraints with Generalised Coordinates.
+		\end{itemize}
+		
+		\paragraph*{Diff from Ordinary Coordinate System}
+		\begin{itemize}
+			\item Its difficult to handle constraints in ordinary coordinate systems.
+			\item The dimensions of Generalised Coordinates may differ from dimensions of Ordinary Coordinate Systems.
+			% \item 
+		\end{itemize}
+
+	\section*{Constraints: }
+		
 		\noindent
 		Independent Coordinates
 
