--- a/cm.tex
+++ b/cm.tex
@@ -71,7 +71,7 @@
 
 	\section*{Constraints: }
 		
-		\noindent
+		\noindent	
 
 		A Constraint is nothing but a limitation on the range of motion of any particle/body, it can restrict the degrees of freedom of the particle/body.
 		\paragraph*{Types of Constraints: }
@@ -309,7 +309,7 @@
 
 			\noindent
 
-			Suppose, a particle is at x,y has a $\Lagr = k (\dot{x}^2 + \dot{y}^2) - V(x^2 + y^2)$, where $ k = \half m $ \todo{Check With Potential too.}
+			Suppose, a particle is at x,y has a $\Lagr = k (\dot{x}^2 + \dot{y}^2) - V(x^2 + y^2)$, where $ k = \half m $	
 
 			Consider a rotation by $\delta$ angle, then
 
@@ -542,8 +542,6 @@
 		\paragraph*{Note:}
 			The no. of Hamiltonian equations is double the Lagrangian equations. \\
 			The Hamiltonian eqs are $1st$ Order Differential Equations where as the Lagrangian eqs are $2nd$ Order.
-
-
 
 
 \end{document}
