Integrals of Motion

--- a/cm.tex
+++ b/cm.tex
@@ -403,7 +403,7 @@
 				Q = P_i f_i(q) \label{eq_conserved_Q}
 			\end{equation}
 		
-		\subsection*{Time Symmetry: }
+		\subsection*{Time Symmetry: } \label{time_symmetry}
 			\noindent \\
 
 			% When $\Lagr$ doesn't expcilitly depend upon $t$, or $\Lagr = \Lagr(q, \dot{q}))$.
@@ -542,6 +542,16 @@
 		\paragraph*{Note:}
 			The no. of Hamiltonian equations is double the Lagrangian equations. \\
 			The Hamiltonian eqs are $1st$ Order Differential Equations where as the Lagrangian eqs are $2nd$ Order.
+	
+	\section*{Integrals of Motion}
+		
+		For a system with Lagrangian $\Lagr$, there exists function of $q$ and $\dot{q}$ which are conserved called integrals of motion.
+
+		For a system of s degrees of freedom, there exits 2s-1 such functions.
+
+		Example: Energy, Momentum, Angular Momentum, etc.
+
+		The conservations of energy directly arises due to symmetry in time, such systems are called conservative systems. \autoref{time_symmetry}
 
 
 \end{document}
