Lagrangian of a Free Particle

--- a/cm.tex
+++ b/cm.tex
@@ -275,6 +275,26 @@
 		$$\implies \delta K = \delta I $$
 
 		$$ \Lagr = F(y, y', x) + \lambda G(y, y', x) $$ where $\lambda$ is underdetermined Lagrangian constant.
+	
+	\section*{Lagrangian of a Free Particle: }
+
+		Lagrangian of a Free Particle constitues only from Kinetic Energy since the particle in a constant potential field thus rendering potential energy to zero. 
+		More generally, it can be said that, since Potential energy arises from the configuration/ position of the particle, and in case of free particle, the configuration and postion are irrelevent.
+
+		The space for a free paricle is homogenous and isotropic, homogenous is nothing but isotropic at all positions, thus making the argument of position irrelevent.
+
+		Since, the space is homogenous and istropic then the Lagrangian must also not depend on the actual coordinates and directions.
+
+		Thus, the Lagrangian of a Free Particle must only be a function of $\Lagr = \Lagr(\dot{q}^2)$.
+
+		Therefore, 
+			$$ \Lagr = k \dot{q}^2 $$
+		
+		Here, the RHS term signifies the Kinetic Energy with $k=\half m$.
+
+	\section*{Lagrangian of a Charged Particle Moving in a EM field: }
+
+		\todo{Lagrangian in EM Field}
 
 	\section*{Conservation Laws and Symmetries: }
 
