--- a/cm.tex
+++ b/cm.tex
@@ -206,6 +206,22 @@
 			\begin{equation}
 				\sum[\ddt(\pdt{T}{\dot{q_j}}) - \pdt{T}{q_j} - Q_j]\delta q_j = 0 
 			\end{equation}
+		
+	\section*{Lagrangian: }
+		% \noindent 
+		From the Principle of Stationary Action, $S = \int_{t_1}^{t_2} L dt $.
+
+		Lagrangian is a function which when integrated along the world-line produces Action.
+
+		EOM's can be obtainted from $\Lagr$ on application of Euler-Lagrange Equation, \hfill \\
+		
+		It should be noted that EOM's
+		\begin{itemize}
+			\item Remain Invarient even if any constant is added to the Lagrangian.
+			\item Remain Invarient even if any constant is multiplied to the Lagrangian.
+			\item Remain Invarient even if any derivate of time is added to the Lagrangian, $\Lagr' = \Lagr + \ddtf{f}$. \todo{Proofs}
+	
+		\end{itemize}
 
 	\section*{Action Priciple: Euler-Lagrange Equation }
 		
