--- a/cm.tex
+++ b/cm.tex
@@ -120,16 +120,18 @@
 			\end{itemize}
 
 	\section*{Virtual Work Prinicple and D'Alembert's Principle: }
-
-		\noindent
 		
-		Virtual infinitesimal displacements of a system refers to the change in config of the system when there is some arbitary small change in the coordinates, consistant with the forces and constraints imposed on the system at time instant t. This Virtual Displacement is different from actual displacement which takes time $dt$ to complete. \\
+		\subsection*{Virtual Displacements: }
+		Virtual infinitesimal displacements of a system refers to the change in config of the system when there is some arbitary small change in the coordinates, consistant with the forces and constraints imposed on the system at time instant t. This Virtual Displacement is different from actual displacement which takes time $dt$ to complete.
+		
+		\subsection*{Virtual Work Principle: }
+			\textbf{Virtual Work is basically the work due to the virtual displacement, when the time interval $dt=0$. It provides the work done when the system is static(in equilibrium).}
 
-		Virtual Work is basically the work due to the virtual displacement, when the time interval $dt=0$. It provides the work done when the system is static(in equilibrium).
-
-		\textbf{D'Alembert Principle}: The total virtual work of the impressed forces plus the inertial forces vanishes for reversible displacements.
+		\subsection*{D'Alembert Principle: } 
+			\textbf{The total virtual work of the impressed forces plus the inertial forces vanishes for reversible displacements.}
 
 		D'Alembert's Principle provides a more general form of the Hamiltonian Principle with the inclusion of holonomic constraints. It is basically the dynamic version of the static Principle of Virtual Works(since it assumes equilibrium).
+		It isn't Applicable to irreversible forces such as sliding friction and is more general than Hamilton's Principle.
 
 		\subsection*{Proof: }
 
