--- a/cm.tex
+++ b/cm.tex
@@ -7,6 +7,7 @@
 \author{Devansh Shukla}
 \date{\today}
 
+\usepackage{indentfirst}
 \usepackage{sectsty}
 
 \sectionfont{\fontsize{12}{14}\selectfont}
@@ -18,8 +19,6 @@
 \newcommand{\ddtf}[1]{\frac{d #1}{dt}}
 \newcommand{\pdt}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\half}{\frac{1}{2}}
-
-% \renewcommand{\paragraph*[1]{\paragraph*{#1}\noindent\\}
 
 \usepackage{titlesec}
 \titleclass{\subsubparagraph}{straight}[\subparagraph]
@@ -226,8 +225,6 @@
 		\end{itemize}
 
 	\section*{Action Priciple: Euler-Lagrange Equation }
-		
-		\noindent
 		
 		Action is defined by $S = \int_a^b \Lagr(q, \dot{q}, t) dt$ where $\Lagr$ is called the Lagrangian and is defined to be a function of $q$, $\dot{q}$, and $t$. \hfill \\
 
