Time Sym Rectify

--- a/cm.tex
+++ b/cm.tex
@@ -471,7 +471,7 @@
 
 			But, since $ P_i = \pdt{\Lagr}{\dot{q_i}} $ and $ \dot{P_i} = \pdt{\Lagr}{q_i} $,
 
-			$$ \ddtf{\Lagr} = \dot{P_i} q_i + P_i \ddot{q_i} $$
+			$$ \ddtf{\Lagr} = \dot{P_i} \dot{q_i} + P_i \ddot{q_i} $$
 
 			$$ \ddtf{\Lagr} = \ddt(P_i \dot{q_i}) $$
 
